# veticare

./: .gitignore  Animal_Disease_prediction.ipynb  DEPLOYMENT_CHECKLIST.md  Dockerfile  PROJECT_RULES.md  README.md  TASKS.md  docker-compose.yml  package-lock.json  requirement.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  start.sh  supabase_migration.sql  test.db  test_debug.db
backend/alembic/: env.py
backend/alembic/versions/: 202607142200_create_initial_schema.py  20260715_0001_initial_schema.py
backend/app/: __init__.py  main.py  predictor.py  recommendations.py
backend/app/ai/: predictor.py  recommendations.py
backend/app/api/: __init__.py  dependencies.py  deps.py  router.py
backend/app/config/: __init__.py  base.py  development.py  factory.py  production.py  testing.py
backend/app/core/: __init__.py  base.py  config.py  database.py  exception_handlers.py  exceptions.py  http.py  logging.py  ml_model.py  rate_limit.py  security.py  session.py  supabase.py
backend/app/data/: diseases.json
backend/app/database/: session.py
backend/app/middleware/: logging.py  request_context.py  security.py
backend/app/models/: __init__.py  appointment.py  audit_log.py  base.py  contact.py  doctor_availability.py  (+17 more)
backend/dataset/: Random1.joblib
backend/scripts/: import_osm_data.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_pet.py  test_prediction.py  test_read.py  test_security_auth.py
(+262 files in other folders)
